@@ -1,3 +1,9 @@
+2004-08-31  Wakaba  <wakaba@suika.fam.cx>
+
+	* dis2pm.pl (const2perl, constgroup2perl): New.
+
+	* idl2dis.pl (idlna): New.
+
 2004-08-30  Wakaba  <wakaba@suika.fam.cx>
 
 	* dis2pm.pl: Versioned implementation of "IF" supported (see
